# rsoi-lab5-template

./: .gitmodules  bonus-service.yaml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  flight-service.yaml  ticket-service.yaml
bonus_service/: Cargo.toml  Dockerfile
bonus_service/migrations/2023-10-14-101625_create_privilege/: down.sql  up.sql
bonus_service/migrations/2023-10-14-101638_create_privilege_history/: down.sql  up.sql
bonus_service/src/: app.rs  main.rs
bonus_service/src/app/: api.rs  domain.rs  error.rs  models.rs  repository.rs  service.rs
bonus_service/src/app/api/: auth_controller.rs  privilege_controller.rs  state.rs
bonus_service/src/app/domain/: privilege.rs  privilege_history.rs
bonus_service/src/app/models/: balance_history.rs  privilege_create_request.rs  privilege_request.rs  validation_error_response.rs
bonus_service/src/app/repository/: privilege_repository.rs  privilege_repository_handlers.rs
bonus_service/src/app/service/: privilege_service.rs  privilege_service_impl.rs  tests.rs
bonus_service/tests/: intergrations_tests.rs
flight_service/: .dockerignore  Cargo.toml  Dockerfile
gateway_service/core/: Cargo.toml
gateway_service/core/src/: config.rs  endpoint.rs  main.rs  models.rs  service.rs  state.rs
gateway_service/core/src/endpoint/: auth_controller.rs  auth_token.rs  error_controller.rs  gateway_controller.rs
gateway_service/core/src/models/: error_description.rs  error_response.rs  pagination_response.rs  privilege_create_request.rs  privilege_info_response.rs  privilege_request.rs  privilege_response.rs  privilege_short_info.rs  ticket_info.rs  ticket_purchase_request.rs  ticket_purchase_response.rs  ticket_request.rs  ticket_response.rs  user_info_response.rs  validation_error_response.rs
gateway_service/core/src/service/: gateway_service.rs  gateway_service_impl.rs
k8s-helm/: ingress.yaml
(+136 files in other folders)
